# Triumvirate

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .pyproject_cuda.toml  .pyproject_hip.toml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTES  NOTES.md  README.md  README.rst  VERSION  _setup.py  _setup_.py  notes.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  version.txt
.devcontainer/: Dockerfile  conda-env.yml  devcontainer.json  notice_welcome.txt  onCreate.sh  postCreate.sh  postStart.sh  welcome_notice.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  autolabels.yml  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  maintenance.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation-feedback.md  feature-request.md  feature-suggestion.md  installation-issue.md  maintenance-request.md
.github/workflows/: build.yml  cd.yml  cd_arm64.yml  cd_cuda.yml  cd_cuda_xp.yml  cd_xp.yml  ci.yml  distribution.yml  draft-pdf.yml  labeller.yml  lint.yml  pre-commit.yml  publication-joss.yml  publication.yml  rebase.yml  tox.yml
application/: appconfig.py  gen_param_file.py
application/calculators/: gen_wc_coeffs.py
application/io/: comb_data_vectors.py  exchange_coord_axes.py  gen_param_file.py  reshape_threept_datatab.py
application/tools/: comb_data_vectors.py  gen_param_file.py
apps/: appconfig.py
apps/calculators/: gen_wc_coeffs.py
apps/io/: gen_param_file.py
deploy/dev/: enh_codee.sh
deploy/doc/: autogen_docs.sh
deploy/pkg/: autoinc_vers.sh  autoinc_version.sh  autorel_anaconda.sh  autorel_testpypi.sh  buildwheel_deps_macos.sh  commit_parser.py  describe_release.py  list_pkg_artifacts.py  prepare_pkg_artifacts.sh  prerelease_ops.sh
deploy/pkg/conda_recipe/: meta.yaml
deploy/pkg/conda_recipe_arm64/: conda_build_config.yaml  meta.yaml
deploy/pkg/conda_recipe_cuda/: conda_build_config.yaml  meta.yaml
deploy/pkg/conda_recipe_cuda_xp/: conda_build_config.yaml  meta.yaml
deploy/pkg/conda_recipe_xp/: conda_build_config.yaml  meta.yaml
deploy/pkg/pyproject/: .pyproject.toml  .pyproject_cuda.toml  .pyproject_hip.toml  .pyproject_hipcuda.toml
deploy/test/: gen_test_dataset.py  gen_test_dataset.sh
docs/: .environment.yml  Doxyfile  Makefile  autogen_docs.sh  dependencies.txt  environment.yml  gendocs.sh  index.html  make.bat  versions.json
docs/source/: Doxyfile.conf  Doxyfile.in  apidoc.rst  apidoc_cpp.rst  apidoc_py.rst  apiref.rst  background.rst  conf.py  doxygen.conf  faq.rst  index.rst  installation.rst  releases.rst  tutorials.rst  tutorials_measurement.rst  tutorials_window.rst
docs/source/_static/: custom-icons.js  custom.css  params_template.ini  params_template.yml  refs.bib
docs/source/_templates/: announce-banner.html
docs/source/_themes/: custom.css  doxygen-awesome-interactive-toc.js  doxygen-awesome-sidebar-only.css  doxygen-custom.css  doxygen-header.html  header.html
docs/source/tutorials/: Binning.ipynb  Catalogue.ipynb  Configuration.ipynb  Logger.ipynb  Logging.ipynb  (+5 more)
examples/: eBOSS_EZmock_QSO_NGC.ipynb  gen_param_file.py  winconv.py
examples/FFTLog/: fftlog_demo.py  hankel_sj1d_demo.py  sj2d_demo.py
include/: bessel.hpp  bispec.hpp  common.hpp  field.hpp  parameter.hpp  parameters.hpp  particle.hpp  particleGadget.hpp  particle_reconstruction.hpp  particles.hpp  particlesGadget.hpp  powerspec.hpp  tools.hpp
include/measurements/: bessel.hpp  bispec.hpp  common.hpp  field.hpp  parameters.hpp  particles.hpp  power.hpp  tools.hpp
publication/joss/: paper.bib  paper.md
publication/supplements/: benchmark.py
src/: measurements.cpp  trium.cpp
src/triumvirate/: __init__.py  __main__.py  _arrayops.py  _bihankel.py  _fftlog.cpp  _fftlog.pxd  _fftlog.pyx  _field.pxd  _field.pyx  _mpitools.py  _particles.cpp  _particles.pxd  _particles.pyx  _threept.cpp  _threept.pyx  _twopt.cpp  _twopt.pyx  _valid_install.py  _winconv.py  catalogue.py  dataobjs.cpp  dataobjs.pxd  dataobjs.pyx  fieldmesh.py  logger.py  parameters.cpp  parameters.pxd  parameters.pyx  threept.py  transforms.py  twopt.py  winconv.py  window.py
tests/: conftest.py  test__arrayops.py  test_bessel.cpp  test_catalogue.py  test_common.cpp  test_dataobjs.py  test_fftlog.cpp  test_fieldmesh.py  test_harmonic.cpp  test_logger.py  test_parameter.cpp  test_parameters.cpp  test_parameters.py  test_particles.cpp  test_threept.py  test_tools.cpp  test_transforms.py  test_twopt.py  test_winconv.py
tests/test_input/: test_params.ini
tools/doc/: autogen_docs.sh
tools/pkg/: autoinc_vers.sh  autorel_pypi.sh  autorel_testpypi.sh  autotest_release.sh
tools/proc/: comb_data_vectors.py
triumvirate/: __init__.py  _catalogue.pxd  _catalogue.pyx  _fftlog.pyx  _morph.pxd  _morph.pyx  _particles.pyx  _pkginfo.py  _threept.pyx  _twopt.pyx  _winconv.py  bihankel.py  catalogue.py  dataobjs.pxd  dataobjs.pyx  logger.py  parameter_set.pyx  parameters.pxd  parameters.pyx  params.pxd  params.pyx  paramset.pxd  paramset.pyx  setup.py  threept.py  threept.pyx  twopt.py  winconv.py
triumvirate/include/: arrayops.hpp  bessel.hpp  common.hpp  dataobjs.hpp  fftlog.hpp  field.hpp  gamma.hpp  harmonic.hpp  io.hpp  maths.hpp  monitor.hpp  parameters.hpp  particles.hpp  threept.hpp  tools.hpp  twopt.hpp
triumvirate/modelling/: conv.py  hankel.py  hankel_fftlog.cpp  hankel_fftlog.pyx
triumvirate/resources/: params_example.ini  params_example.yml
triumvirate/src/: arrayops.cpp  bessel.cpp  dataobjs.cpp  field.cpp  gamma.cpp  harmonic.cpp  io.cpp  maths.cpp  measurements.cpp  monitor.cpp  parameters.cpp  particles.cpp  threept.cpp  tools.cpp  triumvirate.cpp  twopt.cpp
triumvirate/tests/: test_bessel.cpp  test_bihankel.py  test_common.cpp  test_dataobjs.cpp  test_fftlog.cpp  test_field.cpp  test_gamma.cpp  test_hankel.py  test_harmonic.cpp  test_monitor.cpp  test_parameters.cpp  test_threept.cpp  test_tools.cpp  test_twopt.cpp  testint.sh  testit.py  testit.sh
(+134 files in other folders)
