[build-system]
requires = [
    'setuptools>=61.0',
    'setuptools_scm>=6.4',
    'Cython>=3.0',
    'extension-helpers>=1.1',
    'numpy>=2.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'Triumvirate'
authors = [{name = 'Mike S Wang'}, {name = 'Naonori S Sugiyama'}]
maintainers = [{name = 'Mike S Wang', email = "mikeshengbo.wang@ed.ac.uk"}]
license = {file = "LICENCE"}
requires-python = '>=3.10'
dependencies = [
    'numpy>=1.23',
    'scipy>=1.13',
    'sympy>=1.12.1',
    'astropy>=4.2',
    'pyyaml>=5.1',
    'tqdm',
]
description = "Three-point clustering measurements in large-scale structure analyses."
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
  'version',
  'readme',
]

[project.optional-dependencies]
nbk = ['nbodykit']

[project.urls]
# Home = "https://mikeswang.github.io/Triumvirate"
Documentation = "https://triumvirate.readthedocs.io/"
Source = "https://github.com/MikeSWang/Triumvirate"
Changelog = "https://github.com/MikeSWang/Triumvirate/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
# version = {attr = 'triumvirate.__version__'}
readme = {file = "README.rst"}

[tool.setuptools.packages.find]
where = ['src']
namespaces = false
exclude = [
    'triumvirate.include*',
    'triumvirate.src*',
    'triumvirate.resources*',
]

[tool.setuptools.package-data]
'triumvirate' = ["*.pxd", "*.pyx"]
'triumvirate.include' = ["*.hpp"]
'triumvirate.src' = ["*.cpp"]
'triumvirate.resources' = ["*.ini", "*.yml"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = '7.0'
addopts = "--full-trace --verbose --capture=no --runslow"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
build-frontend = 'build'
skip = [
    'pp*',
    '*-win32',
    '*-manylinux_i686',
    '*-musllinux*',
    '*_ppc64le',
    '*_s390x',
]
environment = { PY_BUILD_PARALLEL='-j', SYSTEM_VERSION_COMPAT='0' }
test-requires = "pytest>=7.0"
test-command = "pytest {project}/tests"

manylinux-x86_64-image = 'manylinux_2_28'
manylinux-aarch64-image = 'manylinux_2_28'

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y gsl-devel fftw3-devel",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install gsl fftw libomp",
]
