[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools>=61.0',
    'setuptools_scm>=6.4',
    'Cython>=3.0',
    'extension-helpers>=1.1',
    'numpy>=2.0',
]

[project]
name = 'Triumvirate'
description = "Three-point clustering measurements in large-scale structure analyses."
authors = [
    {name = 'Mike S Wang'},
    {name = 'Naonori S Sugiyama'},
]
maintainers = [
    {name = 'Mike S Wang', email = "32841762+MikeSWang@users.noreply.github.com"},
]
license = {file = "LICENCE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
  'version',
  'readme',
]
requires-python = '>=3.10'
dependencies = [
    'numpy>=1.23',
    'scipy>=1.13',
    'sympy>=1.12.1',
    'astropy>=4.2',
    'pyyaml>=5.1',
    'tqdm',
]

[project.optional-dependencies]
mpi = ['mpi4py>=3.1.5']
nbk = ['nbodykit']

[project.urls]
# Home = "https://mikeswang.github.io/Triumvirate"
Documentation = "https://triumvirate.readthedocs.io/"
Source = "https://github.com/MikeSWang/Triumvirate"
Changelog = "https://github.com/MikeSWang/Triumvirate/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
# version = {attr = 'triumvirate.__version__'}
readme = {file = "README.rst"}

[tool.setuptools.packages.find]
where = ['src']
namespaces = false
exclude = [
    'triumvirate.include*',
    'triumvirate.src*',
    'triumvirate.resources*',
]

[tool.setuptools.package-data]
'triumvirate' = ["*.pxd", "*.pyx"]
'triumvirate.include' = ["*.hpp"]
'triumvirate.src' = ["*.cpp"]
'triumvirate.resources' = ["*.ini", "*.yml"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = '7.0'
addopts = "--full-trace --verbose --capture=no --runslow"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
build-frontend = 'build'
skip = [
    'cp313-*',
    'pp*',
    '*-win32',
    '*-manylinux_i686',
    '*-musllinux*',
    '*_ppc64le',
    '*_s390x',
]
environment = { PY_BUILD_PARALLEL='-j', SYSTEM_VERSION_COMPAT='0' }
test-requires = "pytest>=7.0"
test-command = "pytest {project}/tests"

manylinux-x86_64-image = 'manylinux_2_28'
manylinux-aarch64-image = 'manylinux_2_28'

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y gsl-devel fftw3-devel",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install gsl fftw libomp",
]

[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
max_line_length = 79
ignore = "E226,"

[tool.numpydoc_validation]
checks = [
    'all',
    'ES01',
    'EX01',
    'GL01',
    'GL02',
    'GL03',
    'GL06',
    'RT02',
    'SA01',
    'SS06',
]
exclude = [
    'test_.*',
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
    '\.__hash__$',
    '\.__len__$',
    '\.__ge__$',
    '\.__gt__$',
    '\.__le__$',
    '\.__lt__$',
    '\.__getitem__$',
]

# [tool.docformatter]
# recursive = true
# wrap-summaries = 72
# wrap-descriptions = 72
# blank = true
# close-quotes-on-newline = true

[tool.codespell]
skip = "publication/joss/paper.bib,"
ignore-words-list = "ERRO,"
count = true
quiet-level = 3

[tool.ruff]
target-version = 'py310'
line-length = 79
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
fixable = ['ALL']
unfixable = []

# [tool.ruff.format]
# quote-style = 'preserve'
# indent-style = 'space'
# line-ending = 'auto'
# skip-magic-trailing-comma = true
# docstring-code-format = false
# docstring-code-line-length = 'dynamic'

[tool.semantic_release]
commit_parser = 'commit_parser:TRVCommitParser'
commit_message = "REL: Bump version to {version}"
tag_format = 'v{version}'
allow_zero_version = true
major_on_zero = false
no_git_verify = false
logging_use_named_masks = false
version_variables = [
    "src/triumvirate/__init__.py:__version__",
]

[tool.semantic_release.branches.main]
match = 'main'
prerelease = false

[tool.semantic_release.changelog]
template_dir = "deploy/pkg/tmpl"
exclude_commit_patterns = ['\[dependabot\]', '\[pre-commit.ci\]',]

[tool.semantic_release.changelog.environment]
block_start_string = '{%'
block_end_string = '%}'
variable_start_string = '{{'
variable_end_string = '}}'
comment_start_string = '{#'
comment_end_string = '#}'
newline_sequence = "\n"
autoescape = true
trim_blocks = false
lstrip_blocks = false
keep_trailing_newline = false

[tool.semantic_release.commit_author]
env = 'GIT_COMMIT_AUTHOR'
default = "semantic-release <semantic-release>"
