[metadata]
name = Triumvirate
author = Mike S Wang, Naonori S Sugiyama
maintainer = Mike S Wang
maintainer_email = mikeshengbo.wang@ed.ac.uk
# version = attr: triumvirate.__version__
# license = GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
platform = Linux, Darwin
description = Three-point clustering measurements in large-scale structure analyses.
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
url = https://mikeswang.github.io/Triumvirate
project_urls =
    Documentation = https://triumvirate.readthedocs.io
    Source = https://github.com/MikeSWang/Triumvirate
    Changelog = https://github.com/MikeSWang/Triumvirate/blob/main/CHANGELOG.md

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools>=61.0.0
    setuptools_scm>=6.4.0
    Cython>=0.25
    oldest-supported-numpy
install_requires =
    numpy>=1.17
    scipy>=1.6
    sympy
    astropy>=4.2
    pyyaml>4

[options.extras_require]
nbk =
    nbodykit

[options.packages.find]
where = src
exclude =
    triumvirate.include*
    triumvirate.src*
    triumvirate.resources*

[options.package_data]
triumvirate =
    *.pxd
    *.pyx
triumvirate.include =
    *.hpp
triumvirate.src =
    *.cpp
triumvirate.src.modules =
    *.cpp
triumvirate.resources =
    *.ini
    *.yml

[tool:pytest]
minversion = 6.0
addopts = --full-trace --verbose --capture=no --runslow
testpaths =
    tests
