[metadata]
name = Triumvirate
description = Three-point clustering measurements in large-scale structure analyses.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mike S Wang, Naonori S Sugiyama
maintainer = Mike S Wang
maintainer_email = 32841762+MikeSWang@users.noreply.github.com
# version = attr: triumvirate.__version__
# license = GPL-3.0-or-later
license_files = LICENCE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
platform = Linux, Darwin
url = https://mikeswang.github.io/Triumvirate
project_urls =
    Documentation = https://triumvirate.readthedocs.io
    Source = https://github.com/MikeSWang/Triumvirate
    Changelog = https://github.com/MikeSWang/Triumvirate/blob/main/CHANGELOG.md

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.10
setup_requires =
    setuptools>=61.0
    setuptools_scm>=6.4
    Cython>=3.0
    extension-helpers>=1.1
    numpy>=2.0
install_requires =
    numpy>=1.23
    scipy>=1.13
    sympy>=1.12.1
    astropy>=4.2
    pyyaml>=5.1
    tqdm

[options.extras_require]
mpi =
    mpi4py>=3.1.5
nbk =
    nbodykit

[options.packages.find]
where = src
exclude =
    triumvirate.include*
    triumvirate.src*
    triumvirate.resources*

[options.package_data]
triumvirate =
    *.pxd
    *.pyx
triumvirate.include =
    *.hpp
triumvirate.src =
    *.cpp
triumvirate.src.modules =
    *.cpp
triumvirate.resources =
    *.ini
    *.yml

[tool:pytest]
minversion = 7.0
addopts = --full-trace --verbose --capture=no --runslow
testpaths =
    tests
