[metadata]
name = Triumvirate
description = Three-point clustering measurements in large-scale structure analyses.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mike S Wang, Naonori S Sugiyama
maintainer = Mike S Wang
maintainer_email = 32841762+MikeSWang@users.noreply.github.com
# version = attr: triumvirate.__version__
# license = GPL-3.0-or-later
license_files = LICENCE
classifiers =
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
platform = Linux, Darwin
url = https://mikeswang.github.io/Triumvirate
project_urls =
    Documentation = https://triumvirate.readthedocs.io
    Source = https://github.com/MikeSWang/Triumvirate
    Changelog = https://github.com/MikeSWang/Triumvirate/blob/main/CHANGELOG.md

[options]
packages = find_namespace:
package_dir=
    =src
include_package_data = True
python_requires = >=3.10
setup_requires =
    setuptools>=61.0
    setuptools_scm>=6.4
    Cython>=3.0
    extension-helpers>=1.1
    numpy>=2.0
install_requires =
    numpy>=1.23
    scipy>=1.13
    sympy>=1.12.1
    astropy>=4.2
    pyyaml>=5.1
    tqdm

[options.extras_require]
mpi =
    mpi4py>=3.1.5
nbk =
    nbodykit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    triumvirate = triumvirate.__main__:main

[options.package_data]
triumvirate =
    *.pxd
    *.pyx
triumvirate.include =
    *.hpp
triumvirate.src =
    *.cpp
triumvirate.resources =
    *.ini
    *.yml

[tool:pytest]
minversion = 7.0
addopts = --full-trace --verbose --capture=no --runslow
testpaths =
    tests

[pycodestyle]  # AKA: tool.autopep8
in-place = true
recursive = true
aggressive = 3
max_line_length = 79
ignore = E226

[tool:numpydoc_validation]
checks = all,ES01,EX01,GL01,GL02,GL03,GL06,RT02,SA01,SS06,
exclude = test_.*,\.__init__$,\.__repr__$,\.__str__$,\.__hash__$,\.__len__$,\.__getitem__$,\.__eq__$,\.__le__$,\.__lt__$,\.__gt__$,\.__ge__$,

# [docformatter]
# recursive = true
# wrap-summaries = 72
# wrap-descriptions = 72
# blank = true
# close-quotes-on-newline = true

# [codespell]
# skip = publication/joss/paper.bib,
# ignore-words-list = ERRO,
# count = true
# quiet-level = 3
